# PointlesSQL

./: .bandit  .bandit-baseline.json  .dockerignore  .env.example  .gitignore  .lycheeignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.soyuz  NOTICE  NOTICE.txt  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md  SECURITY.md  alembic.ini  biome.json  cliff.toml  commitlint.config.js  commitlint.config.mjs  databricks-summit-backlog.md  docker-compose.e2e.yml  docker-compose.grafana.postgres.yml  docker-compose.grafana.yml  docker-compose.postgres.yml  docker-compose.yml  jsconfig.json  mkdocs.yml  pointlessql.yaml.example  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: commitlint.yml  docker.yml  docs.yml  mutation-nightly.yml  mutation-pr.yml  nightly.yml  release.yml  security-sast.yml  test.yml
dbt_project/: dbt_project.yml
dbt_project/models/: bronze_raw.sql
dbt_project/seeds/: orders.csv
docker/: Dockerfile  Dockerfile.soyuz  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.grafana.postgres.yml  docker-compose.grafana.yml  docker-compose.postgres.yml  docker-compose.yml
docs/: architecture.excalidraw  auth.md  changelog.md  data-layers.md  design-tokens.md  index.md  install.md  phase-77.md  ui-overhaul-proposal.md
docs/admin/: api-key-acls.md  api-key-format.md  api-key-lifecycle.md  disaster-recovery.md  oidc-group-map.md  performance.md  postgres-deployment.md  workspace-management.md
docs/concepts/: agent-memory.md  agent-supervision.md  architecture.md  audit-trail.md  auth.md  cell-level-social.md  contextual-help.md  data-layers.md  data-products.md  git-backed-workspaces.md  index.md  lineage.md  nl-to-sql.md  pii-modes.md  vector-search.md  workspaces.md
docs/decisions/: 0001-notebook-editor.md  0002-duckdb-first.md  0003-delta-branching-spike.md  0004-public-flip-checklist.md  0008-workspace-soft-isolation.md  0009-doc-publication-decisions.md  0010-cedar-policy-as-code.md  0011-data-product-as-code.md  0012-cost-attribution-and-quotas.md  index.md
docs/development/: design-tokens.md  frontend-architecture.md  frontend-conventions.md  index.md  test-suite.md
docs/e2e-walkthroughs/: README.md  access-requests.md  admin-audit.md  admin-cdf-tail.md  admin-console.md  admin-data-product-apply.md  admin-entity-discovery.md  admin-mesh-dashboard.md  admin-policy-modules.md  admin-secrets.md  agent-drift-monitor.md  agent-memory.md  agent-ml-registry.md  agent-review-detail.md  agent_drift_monitor.md  agent_memory.md  ai-functions.md  alerts.md  asset-bundles.md  audit-cockpit-deep.md  audit-reviewer-daily.md  audit-sinks.md  auth.md  bi-dashboards.md  branches.md  catalog-browsing.md  command-palette.md  compliance-bot.md  computational-policy-as-code.md  config-matrix.md  contextual-panels.md  csrf.md  dashboard-snapshots.md  dashboards.md  data-classification.md  data-domains.md  data-governance.md  data-mesh.md  data-product-as-code.md  data-product-bitemporal-enforcement.md  (+85 more)
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/guides/: agent-bring-up.md  faq.md  index.md  jobs.md  operator-cookbook.md  troubleshooting.md
docs/hermes-jobs/: README.md  audit-reviewer-daily.json  compliance-bot.md  incident-responder.md
docs/integrations/: grafana.md  hermes-plugin.md  index.md  mlflow.md  soyuz-catalog.md
docs/internal/: authz-matrix.md  doc-audit.md  (+31 more)
e2e/: _journeys.py  a11y_helpers.py  conftest.py  test_a11y_violations_floor.py  test_e2e_coverage_ledger.py  test_notebook_coedit_multi_tab.py  test_smoke.py
notebooks/: agent_drift_monitor.py  getting_started.ipynb  hermes_medallion.py  inline_assistant_walkthrough.py  phase96_walkthrough.py
pointlessql/: __init__.py  db.py  enums.py  error_codes.py  exceptions.py  identifiers.py  logging_config.py  models.py  settings.py  table_fqn.py  types.py
scripts/: audit-wake-gate.py  authz_matrix_generate.py  bench_test_suite.sh  bump-version.sh  check-a11y-violations-floor.sh  check-alembic-fresh-drift.sh  check-alembic-head.sh  check-doc-orphans.sh  check-file-size-budget.sh  check-form-labels.sh  check-frontend-bootstrap-budget.sh  check-frontend-bootstrap-order.sh  check-frontend-no-reactive-monaco.sh  check-frontend-raw-fetch-budget.sh  check-grafana-dashboards.sh  check-mutation-budget.sh  check-no-phase-refs.sh  check-perf-budget.sh  check-pyright-budget.sh  check-sri-hashes.sh  check-sync-bridge.sh  check-theme-boot-order.sh  check-typed-principal.sh  clusters.json  devlog-split.py  doc-inventory.py  dump-openapi.py  mcp_tool_matrix_generate.py  perf-budget.json  pg-seed.sql  regen-changelog.py  seed-broken-run.py  seed-e2e.py  seed-full-stack-demo.py  seed-mesh-demo.py  seed_audit_lake.py  use-editable-soyuz.sh  use-pinned-soyuz.sh  vendor-diff-lib.sh  vendor-markdown-libs.sh  (+2 more)
tests/: conftest.py  test_access_requests.py  test_actionable_signals.py  test_active_reviewer_v2_agent.py  test_admin_api_key_grants_routes.py  test_admin_api_keys_page.py  test_admin_api_keys_routes.py  test_admin_audit.py  test_admin_audit_sinks_page.py  test_admin_cdf_tail_page.py  test_admin_coedit_bus_status.py  test_admin_index.py  test_admin_repos_routes.py  test_admin_review_destinations_page.py  test_admin_surface_pages.py  test_admin_system_info_page.py  test_admin_uc_dep.py  test_admin_workspaces_routes.py  test_agent_gateway.py  test_agent_guardrails.py  test_agent_memory_registry.py  test_agent_run_audit.py  test_agent_run_full.py  test_agent_run_tool_calls.py  test_agent_runs_memory__branch_mutkill.py  test_agent_runs_memory__replay_mutkill.py  test_agent_runs_statistics.py  test_agent_runs_workspace_isolation.py  test_agents_phase76_5.py  test_aggregate.py  test_aggregate_column_edges.py  test_ai_functions.py  test_ai_gateway.py  test_alert_check_logic.py  test_alert_feeds.py  test_alerts.py  test_alpine_x_data_quoting.py  test_anomaly_highlighting.py  test_api_errors.py  test_api_key_acl.py  (+628 more)
(+2571 files in other folders)
