[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pointlessql"
version = "0.1.0"
description = "A web UI for Unity Catalog and other open-source Databricks components"
license = "Apache-2.0"
readme = "README.md"
keywords = ["databricks", "unity-catalog", "delta-lake", "spark", "lakehouse"]
authors = [
    { name = "Florian Hofstetter", email = "flo.max.hofstetter@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "websockets>=16.0",
    "typer>=0.15",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "pwdlib[bcrypt]>=0.2",
    "prometheus_client>=0.21",
    "httpx>=0.28",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.9",
    "soyuz-catalog-client",
    "deltalake>=0.24",
    "duckdb>=1.0",
    "pandas>=2.2",
    "polars>=1.0",
    "jupyterlab>=4.0",
    "python-multipart>=0.0.26",
    "psycopg[binary]>=3.1",
    "pyarrow>=17.0",
    "croniter>=6.2.2",
    "papermill>=2.6",
    "nbconvert>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8",
    "httpx>=0.28",
    "ruff>=0.15",
    "pyright>=1.1",
    "hatchling>=1.29.0",
    "pydoclint>=0.8",
    "pip-audit>=2.10.0",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "bandit>=1.9.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

[project.urls]
Homepage = "https://github.com/FloHofstetter/PointlesSQL"
Repository = "https://github.com/FloHofstetter/PointlesSQL"
Issues = "https://github.com/FloHofstetter/PointlesSQL/issues"

[project.scripts]
pointlessql = "pointlessql.api.main:cli"

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "pointlessql/_frontend"

[tool.hatch.build.targets.sdist]
include = ["pointlessql", "frontend", "notebooks", "LICENSE", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D"]
ignore = ["D107"]  # __init__ docstrings — handled by class docstring per pydoclint
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["pointlessql"]
reportMissingTypeStubs = false
# Third-party libs (deltalake, duckdb, pandas, polars) have incomplete stubs.
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
# Defensive isinstance checks against generated-client responses are needed
# at runtime even when pyright considers them always true.
reportUnnecessaryIsInstance = "warning"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live Unity Catalog server",
    "postgres: requires a live PostgreSQL server (set TEST_DATABASE_URL)",
]

[tool.coverage.run]
source = ["pointlessql"]

[tool.coverage.report]
show_missing = true

[tool.uv.sources]
soyuz-catalog-client = { git = "https://github.com/FloHofstetter/soyuz-catalog", tag = "v0.2.0rc2", subdirectory = "soyuz-catalog-client" }
