[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pointlessql"
version = "0.1.0rc97"
description = "A web UI for Unity Catalog and other open-source Databricks components"
license = "Apache-2.0"
readme = "README.md"
keywords = ["databricks", "unity-catalog", "delta-lake", "spark", "lakehouse"]
authors = [
    { name = "Florian Hofstetter", email = "flo.max.hofstetter@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.135",
    "uvicorn>=0.42",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "websockets>=16.0",
    "typer>=0.15",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "pwdlib[bcrypt]>=0.2",
    "prometheus_client>=0.21",
    "httpx>=0.28",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.9",
    "soyuz-catalog-client",
    "deltalake>=0.24",
    "duckdb>=1.0",
    "pandas>=2.2",
    "polars>=1.0",
    "python-multipart>=0.0.26",
    "psycopg[binary]>=3.1",
    "pyarrow>=17.0",
    "croniter>=6.2.2",
    "papermill>=2.6",
    "nbconvert>=7.0",
    "sqlglot>=26.0",
    "jupytext>=1.16",
    "jupyter_client>=8.6",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "pyright>=1.1",
    "markdown-it-py>=3.0",
    "ansi2html>=1.9",
    "Pygments>=2.18",
    "cryptography>=44.0",
    "mcp[cli]>=1.2",
    "openai>=1.50",
    "anthropic>=0.40",
    # Phase 105 — Y.js / CRDT backbone for real-time co-edit.
    # ``pycrdt`` is the actively maintained successor to ``y-py``;
    # its wire format is byte-identical to Y.js so ``y-monaco`` on
    # the client side talks to the server without a brücke layer.
    # C-extension (binding to yrs).  Sprint 105.1 verifies install
    # via ``uv sync`` before the rest of the phase builds on it.
    "pycrdt>=0.10",
]

[project.optional-dependencies]
ml = [
    "mlflow >= 3.11, < 3.12",
]
dbt = [
    "dbt-duckdb >= 1.9, < 2.0",
]
# Phase 92 — vector-search compute primitive.  The default embedder
# uses ``sentence-transformers`` (lazy import).  Pulls in PyTorch
# (~700 MB), so it stays optional — minimal installs that never call
# ``pql.vector_index`` are unaffected.  The ``openai`` SDK is already
# a core dep (chat panel), so no separate extra is needed for the
# hosted ``OpenAIEmbedder`` provider.
vector = [
    "sentence-transformers >= 2.7, < 4.0",
]
# Note: ``dbt-expectations`` and ``dbt-utils`` are dbt *packages*
# (Jinja macros), not Python wheels.  They are declared in the user's
# ``packages.yml`` and installed via ``dbt deps``, not via pip.

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.8",
    "httpx>=0.28",
    "ruff>=0.15",
    "pyright>=1.1",
    "hatchling>=1.29.0",
    "pydoclint>=0.8",
    # Phase 74.CI.1 — explicit dep on the fork so the post-install
    # state is deterministic.  pydoclint 0.8.3 imports
    # ``DocstringYields`` from ``docstring_parser.common``; the
    # symbol only ships in the fork variant.  anthropic>=0.40 pulls
    # the upstream ``docstring-parser`` transitively, and both
    # packages install into ``site-packages/docstring_parser/`` —
    # whichever wheel writes last wins.  Pinning the fork
    # explicitly + listing it AFTER pydoclint ensures uv records
    # both in the resolved env and the fork's files land last on
    # CI's clean install.
    "docstring-parser-fork>=0.0.14",
    "pip-audit>=2.10.0",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "bandit>=1.9.4",
    "mlflow >= 3.11, < 3.12",
    # Phase 108 — headless browser tests for the multi-tab co-edit CI
    # gate.  The Python ``playwright`` package downloads its own
    # bundled Chromium via ``playwright install chromium`` — system
    # browsers are not used.  Only the new ``e2e/`` tests import it;
    # the rest of the suite never touches Playwright.
    "playwright>=1.50",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

[project.urls]
Homepage = "https://github.com/FloHofstetter/PointlesSQL"
Repository = "https://github.com/FloHofstetter/PointlesSQL"
Issues = "https://github.com/FloHofstetter/PointlesSQL/issues"

[project.scripts]
pointlessql = "pointlessql.api.main:cli"

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "pointlessql/_frontend"

[tool.hatch.build.targets.sdist]
include = ["pointlessql", "frontend", "notebooks", "LICENSE", "README.md"]

[tool.ruff]
line-length = 100
target-version = "py314"
# Sprint 69 housekeeping: per-developer scratch notebooks under
# ``notebooks/scratch*`` are workspace state, not shipped code, and
# don't carry module docstrings — exclude them from lint.  Tracked
# notebooks (e.g. ``getting_started.ipynb``) stay in scope.
extend-exclude = ["notebooks/scratch*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D", "BLE"]
ignore = ["D107"]  # __init__ docstrings — handled by class docstring per pydoclint
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# Phase 108 e2e tests live at ``e2e/`` (sibling of ``tests/``) and
# follow the same docstring exemption — test packages don't need
# Google-style module docstrings since they don't ship as a library.
"e2e/**" = ["D"]
# Phase 31.1/31.3 — ``tests/conftest.py`` sets env vars and rebinds
# the bcrypt hasher *before* importing the application, which trips
# the "imports at top of file" / "import block sorting" rules even
# though the ordering is load-bearing.  E402 + I001 are silenced for
# the conftest only; the real conftest body still gets full lint.
"tests/conftest.py" = ["D", "E402", "I001"]
# Notebooks use jupytext percent format with markdown cells carrying
# the prose — module-level Python docstrings would duplicate the
# first markdown cell.  Sprint 13.5's agent_drift_monitor.py is the
# first tracked notebook; this ignore generalises the policy.
"notebooks/**" = ["D"]
# Alembic migration files are scaffolded by ``alembic revision
# --autogenerate``; the resulting docstring header and per-function
# layout do not match Google-style policy and the create_index calls
# routinely exceed 100 chars.  Lint compliance there gives us no
# real signal — the migrations are mechanical schema deltas.
"pointlessql/alembic/versions/**" = ["D", "E501"]
# Notebook starter templates ship as jupytext percent-format snippets.
# Their first markdown cell carries the description (no module docstring
# needed), and they routinely reference variables that the user wires up
# at kernel runtime (e.g. ``features`` from a ``%sql -o features`` magic
# in a previous cell, or ``df`` populated from a Delta read).  Pyright
# already excludes this tree; ruff needs the matching tolerance.
"pointlessql/data/notebook_templates/**" = ["D", "F401", "F821"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["pointlessql"]
# Notebook starter templates are intentionally incomplete plain-Python
# snippets that the user fills in at kernel runtime; Pyright cannot
# resolve cross-cell bindings or the implicit ``pql`` injection there.
exclude = ["pointlessql/data/notebook_templates"]
reportMissingTypeStubs = false
# Third-party libs (deltalake, duckdb, pandas, polars) have incomplete stubs.
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
# Defensive isinstance checks against generated-client responses are needed
# at runtime even when pyright considers them always true.
reportUnnecessaryIsInstance = "warning"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# ``testpaths = ["tests"]`` keeps the default ``pytest`` invocation
# focused on the unit/integration suite under ``tests/``.  The Phase
# 108 e2e tree lives at ``e2e/`` (sibling, not child) so the
# ``tests/conftest.py`` autouse-fixture cascade — which short-circuits
# the FastAPI lifespan and rebinds ``app.state`` per test — does not
# clobber the live uvicorn server the e2e tests need.  CI runs
# ``pytest e2e/ -m e2e`` explicitly in its own job.
testpaths = ["tests"]
addopts = "-m 'not integration and not e2e'"
markers = [
    "integration: requires a live Unity Catalog server",
    "postgres: requires a live PostgreSQL server (set TEST_DATABASE_URL)",
    "e2e: requires a headless browser via Playwright; lives under e2e/",
]

[tool.coverage.run]
source = ["pointlessql"]

[tool.coverage.report]
show_missing = true
# Local pytest --cov runs do not enforce a floor — the floor lives in
# the CI workflow (`--cov-fail-under=55`) so contributors can iterate
# locally without coverage rejection while CI still gates merges.
skip_covered = false

[tool.uv.sources]
soyuz-catalog-client = { git = "https://github.com/FloHofstetter/soyuz-catalog", tag = "v0.3.0rc3", subdirectory = "soyuz-catalog-client" }

[tool.uv]
# Override the mashumaro upper bound that dbt-core <=1.11 declares
# (``mashumaro[msgpack]<3.15``).  mashumaro 3.17 is the first release
# that handles ``Optional[str]`` annotations under Python 3.14 — see
# dbt-labs/dbt-core#12098.  Runtime against dbt-core 1.11.8 +
# dbt-adapters 1.22.10 is verified clean (Phase 36.7 close,
# 2026-05-06).  Drop this override once dbt-core ships a release that
# bumps its own pin.
override-dependencies = [
    "mashumaro[msgpack]>=3.17",
]
